{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Movement",
            "id": "ba63c515-e69a-4cf1-8ebe-3494c8017c1b",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "4ad57990-d0fc-4d7a-a98c-332758bed7f2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "899c90a5-4b2d-441e-b044-7841d8401502",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "194c4315-b46a-4ee3-8041-0d44981534ea",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "09bfb715-4640-4dfb-906e-2381fcbe9d13",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6621512d-1fab-443c-9f22-ccf5bee0fdc7",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "bc1b8ee4-e787-45d0-8900-c19d59fd47b9",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Input",
            "id": "e0a81eb9-5d18-4086-8a9e-041142e6ac4d",
            "actions": [
                {
                    "name": "ZoomOut",
                    "type": "Button",
                    "id": "bdf03d9a-8a7f-4dc2-8651-d674cc9efc78",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Exit",
                    "type": "Button",
                    "id": "ed93c325-5b15-4cd7-9e96-c45f0059c782",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Achievements",
                    "type": "Button",
                    "id": "ae02ba20-4a9b-4f77-9e98-8fdd1bbad975",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "be2d24cd-5e1f-4234-8ad6-5ad9f502bd86",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomOut",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5a936256-07f2-4cec-a8bd-e7c60bfcdf5a",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5c3f40b8-ebfc-4886-b437-bd81d78011c9",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Achievements",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}